refactoring
- remove redundant codes